force-app/main/default/objects/Loopio__Go_No_Go_Answer_Item__c/Loopio__Go_No_Go_Answer_Item__c.object-meta.xml
<CustomObject>
    <description>This object stores the actual record or Go/No-Go answers which stores answers given by the users. This object contains a Master-Detail relation with the Go/No-Go Answer object.</description>
    <label>[depre] Go/No-Go Question &amp; Answer Value</label>
    <nameField>
        <displayFormat>GNGAI-{0000}</displayFormat>
        <label>[depre] Go/No-Go Q&amp;A Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>[depre]Go/No-Go Question &amp; Answer Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>