force-app/main/default/objects/Loopio__Go_No_Go_Answer_Item__c/fields/Loopio__Go_No_Go_Answer__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Go_No_Go_Answer__c</fullName>
    <description>Master-Detail relation with Go/No-Go Submission.</description>
    <label>Go/No-Go Submission</label>
    <referenceTo>Loopio__Go_No_Go_Answer__c</referenceTo>
    <relationshipName>Go_No_Go_Answer_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>