force-app/main/default/objects/Loopio__Go_No_Go_Answer_Item__c/fields/Loopio__Go_No_Go_Question_Bank__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Go_No_Go_Question_Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup of Go/No-Go Question Bank for actual question.</description>
    <label>Go/No-Go Question</label>
    <referenceTo>Loopio__Go_No_Go_Question_Bank__c</referenceTo>
    <relationshipName>Go_No_Go_Answer_Items</relationshipName>
    <type>Lookup</type>
</CustomField>