force-app/main/default/objects/Loopio__Go_No_Go_Answer_Item__c/fields/Loopio__Question__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Question__c</fullName>
    <description>To store the question.</description>
    <label>Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>