force-app/main/default/objects/Loopio__Go_No_Go_Answer_Item__c/fields/Loopio__Value__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Value__c</fullName>
    <description>To store answer given by the user.</description>
    <label>Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>