force-app/main/default/objects/Loopio__Go_No_Go_Answer_Item__c/listViews/Loopio__All.listView-meta.xml
<ListView>
    <fullName>Loopio__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>